# test-django

./: README.md  docker-compose.yaml  pyproject.toml
books/: views.py
books/migrations/: 0001_initial.py
mysite/: settings.py  urls.py
shell/: dc.sh
