[tool.poetry]
name = "test-django"
version = "0.1.0"
description = ""
authors = ["keewoong nam <keewoong.nam@flicspy.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
